# code-crew

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
scripts/: bg-remove-manual.py  build-pets-cats.py  build-pets.py  copy-hook.sh  crop_dogs.py
src/: App.css  App.tsx  index.css  main.tsx  pet-animations.css  store.test.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex_monitor.rs  events.rs  hook_install.rs  lib.rs  main.rs  project_key.rs  server.rs  storage.rs
src-tauri/windows/: hooks.nsh
src/assets/: breeds.ts
src/components/: BreedPicker.tsx  ChatMessage.tsx  PermissionInline.tsx  Pet.tsx  PetCard.tsx  SpeechBubble.tsx
src/hooks/: useIdleSweep.ts
src/lib/: messages.test.ts  messages.ts  petState.test.ts  petState.ts  pets.test.ts  pets.ts
